nullaway_error_49B0DE90-5937-42A8-9CA3-27D86489A16D.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context-support/src/main/java/org/springframework/scheduling/quartz/SchedulerAccessor.java:252: error: [NullAway] dereferenced expression this.transactionManager is @Nullable
					this.transactionManager.rollback(transactionStatus);
					                       ^
    (see http://t.uber.com/nullaway )
